--- a/data/css/controls.css
+++ b/data/css/controls.css
@@ -104,5 +104,5 @@
   -fx-background-color: -ui-2;
 
   -fx-font-family: 'IBM Plex Sans';
-  /* -fx-font-size: 15; */
+  -fx-font-size: 15;
 }
